# suna

./: .env.example  .gitignore  .replit  COMPLETE_TOOL_CHANGES.md  CONTRIBUTING.md  LINTING_FIXES_SUMMARY.md  PAGINATION_IMPLEMENTATION.md  README.md  SELF-HOSTING.md  deploy.sh  docker-compose.ghcr.yaml  docker-compose.yaml  mise.toml  sample_agent_export.json  sdk_example.py  setup.py  start.py  test.json  test_agent_builder_response.py  test_setup.py
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG_ERROR_HANDLING.md  CHANGES_SUMMARY.md  Dockerfile  MIGRATION_GUIDE.md  README.md  api.py  docker-compose.prod.yml  docker-compose.yml  fly.production.toml  fly.staging.toml  list_mcp.py  pyproject.toml  requirements.txt  run_agent_background.py  run_workflow_background.py  sentry.py  test_custom_mcp.py  test_image_compression.py  test_mcp_tools.py  test_mcp_use.py  test_xml_examples.py  worker_health.py
backend/admin/: __init__.py  api.py
backend/agent/: agent_builder.py  agent_builder_prompt.py  api.py  config_helper.py  custom_prompt.py  gemini_prompt.py  prompt.py  prompt.txt  run.py  run_agent.py  utils.py  version_manager.py  workflows.py
backend/agentpress/: README.md  context_manager.py  response_processor.py  thread_manager.py  tool.py  tool_registry.py  xml_tool_parser.py
backend/auth/: phone_verification_supabase_mfa.py
backend/credentials/: __init__.py  api.py  credential_service.py  facade.py  profile_service.py  protocols.py  utils.py
backend/docker/: Dockerfile  entrypoint.sh
backend/docs/: ERROR_HANDLING.md  LENGTH_CONTEXT_AUTO_CONTINUE.md  browser_state_image_display.md  double_escape_fix_summary.md  see_image_compression.md
backend/feedback/: api.py
backend/flags/: api.py  flags.py  setup.py
backend/knowledge_base/: __init__.py  api.py  file_processor.py
backend/local_env_manager/: api.py
backend/local_llm/: api.py
backend/mcp/: __init__.py  api.py
backend/mcp_local/: api.py  credential_manager.py  generate_encryption_key.py  secure_api.py  secure_client.py  template_manager.py  test.txt
backend/mcp_module/: __init__.py  api.py  facade.py  mcp_service.py  protocols.py
backend/mcp_service/: __init__.py  api.py  client.py  credential_manager.py  generate_encryption_key.py  mcp_custom.py  mcp_providers.py  secure_api.py  template_api.py  template_manager.py
backend/pipedream/: __init__.py  api.py  app_service.py  client.py  connection_service.py  connection_token_service.py  facade.py  mcp_service.py  profile_service.py  profiles.py  protocols.py  search_utils.py
backend/sandbox/: README.md  api.py  sandbox.py  tool_base.py
backend/scheduling/: __init__.py  api.py  models.py  qstash_service.py
backend/scripts/: manage_suna_agents.py  suna_manager.py
backend/services/: api_keys.py  api_keys_api.py  billing.py  email.py  (+8 more)
kortix/: README.md  __init__.py  agent.py  client.py  config.py  exceptions.py  models.py  play.py  pyproject.toml  pytest.ini  setup.py  thread.py
(+1404 files in other folders)
