[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kortix"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Suna AI", email = "team@suna.so" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "aiohttp>=3.8.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kortix/kortix-python"
Repository = "https://github.com/kortix/kortix-python"

[tool.flit.module]
name = "kortix"

[tool.uv]
dev-dependencies = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "aiohttp>=3.8.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
]
